force-app/main/default/objects/Contact/fields/ConsentMigratedFromCDC__c.field-meta.xml
<CustomField>
    <fullName>ConsentMigratedFromCDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Migrated From CDC</label>
    <type>Checkbox</type>
</CustomField>