force-app/main/default/objects/Contact/fields/Council_State__c.field-meta.xml
<CustomField>
    <fullName>Council_State__c</fullName>
    <label>Council State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acre</fullName>
            </value>
            <value>
                <fullName>Alagoas</fullName>
            </value>
            <value>
                <fullName>Amapa</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Bahia</fullName>
            </value>
            <value>
                <fullName>Ceara</fullName>
            </value>
            <value>
                <fullName>FederalDistrict</fullName>
            </value>
            <value>
                <fullName>Goias</fullName>
            </value>
            <value>
                <fullName>Holy Spirit</fullName>
            </value>
            <value>
                <fullName>Maranhao</fullName>
            </value>
            <value>
                <fullName>Mato Grosso do Sul</fullName>
            </value>
            <value>
                <fullName>Matto Grosso</fullName>
            </value>
            <value>
                <fullName>MInas Gerais</fullName>
            </value>
            <value>
                <fullName>Para</fullName>
            </value>
            <value>
                <fullName>Paraiba</fullName>
            </value>
            <value>
                <fullName>Parana</fullName>
            </value>
            <value>
                <fullName>Pernambuco</fullName>
            </value>
            <value>
                <fullName>Piaui</fullName>
            </value>
            <value>
                <fullName>Rio de Janerio</fullName>
            </value>
            <value>
                <fullName>Rio Grande do Norte</fullName>
            </value>
            <value>
                <fullName>Rio Grande do Sul</fullName>
            </value>
            <value>
                <fullName>Rondonia</fullName>
            </value>
            <value>
                <fullName>Roraima</fullName>
            </value>
            <value>
                <fullName>Santa Catarina</fullName>
            </value>
            <value>
                <fullName>Sao Paulo</fullName>
            </value>
            <value>
                <fullName>Sergipe</fullName>
            </value>
            <value>
                <fullName>Tocantins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>