force-app/main/default/objects/Contact/fields/Email_Verfication_Pending_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Email_Verfication_Pending_in_Hours__c</fullName>
    <description>Number of hours it took from &quot;First Verification Email Sent&quot; to &quot;Email verified&quot;</description>
    <formula>(FLOOR(( EmailVerificationDateTime__c - Email_Verification_Sent_DateTime__c )*24))</formula>
    <label>Email Verification Pending in Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>