force-app/main/default/objects/Contact/fields/Email_Verification_Sent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Email_Verification_Sent_DateTime__c</fullName>
    <label>Email Verification Sent DateTime</label>
    <type>DateTime</type>
</CustomField>