force-app/main/default/objects/Contact/fields/EmailVerificationDateTime__c.field-meta.xml
<CustomField>
    <fullName>EmailVerificationDateTime__c</fullName>
    <description>This field captures the date time when the email was verified by HCP</description>
    <label>Email Verification Date time</label>
    <type>DateTime</type>
</CustomField>