force-app/main/default/objects/Contact/fields/EmailVerificationKey__c.field-meta.xml
<CustomField>
    <fullName>EmailVerificationKey__c</fullName>
    <description>This field contains the email verification key shared to customer</description>
    <label>Email Verification Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>