force-app/main/default/objects/Contact/fields/EmailVerificationReminderCount__c.field-meta.xml
<CustomField>
    <fullName>EmailVerificationReminderCount__c</fullName>
    <description>This field tracks the count of verification reminders sent to customer</description>
    <label>Email Verification Reminder Count</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>