force-app/main/default/objects/Contact/fields/IsEmailVerified__c.field-meta.xml
<CustomField>
    <fullName>IsEmailVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Email Verified</label>
    <type>Checkbox</type>
</CustomField>