force-app/main/default/objects/Contact/fields/isVerificationEmailSent__c.field-meta.xml
<CustomField>
    <fullName>isVerificationEmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field tracks if the first verification email is sent to customer</description>
    <label>Is Verification Email Sent</label>
    <type>Checkbox</type>
</CustomField>