force-app/main/default/objects/Contact/fields/MedicalField__c.field-meta.xml
<CustomField>
    <fullName>MedicalField__c</fullName>
    <label>MedicalField</label>
    <length>50</length>
    <type>Text</type>
</CustomField>