force-app/main/default/objects/Contact/fields/NPIId__c.field-meta.xml
<CustomField>
    <fullName>NPIId__c</fullName>
    <label>Medical Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>