force-app/main/default/objects/Contact/fields/OWA_ID__c.field-meta.xml
<CustomField>
    <fullName>OWA_ID__c</fullName>
    <label>OWA_ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>