force-app/main/default/objects/Contact/fields/PlatformStatus__c.field-meta.xml
<CustomField>
    <fullName>PlatformStatus__c</fullName>
    <label>PlatformStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Logged in</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
                <isActive>false</isActive>
                <label>Postponed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>