force-app/main/default/objects/Contact/fields/PrivacyConsent__c.field-meta.xml
<CustomField>
    <fullName>PrivacyConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Consent</label>
    <type>Checkbox</type>
</CustomField>