force-app/main/default/objects/Contact/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profession</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Dermatologist</fullName>
            </value>
            <value>
                <fullName>Dental Auxiliary</fullName>
            </value>
            <value>
                <fullName>Dental prosthetist</fullName>
            </value>
            <value>
                <fullName>Health Care Provider</fullName>
            </value>
            <value>
                <fullName>Medical Assistance</fullName>
            </value>
            <value>
                <fullName>Medical auxiliary</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Physician Assistant</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Reimbursement specialist</fullName>
            </value>
            <value>
                <fullName>Office manager</fullName>
            </value>
            <value>
                <fullName>Payor</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Physiotherapist</fullName>
            </value>
            <value>
                <fullName>Optician</fullName>
            </value>
            <value>
                <fullName>Chemist</fullName>
            </value>
            <value>
                <fullName>Paramedics</fullName>
            </value>
            <value>
                <fullName>Midwife</fullName>
            </value>
            <value>
                <fullName>Vet</fullName>
            </value>
            <value>
                <fullName>Other healthcare professional</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Journalist/Media</fullName>
            </value>
            <value>
                <fullName>Medical student</fullName>
            </value>
            <value>
                <fullName>Laboratory Technician</fullName>
            </value>
            <value>
                <fullName>Staff Galderma</fullName>
            </value>
            <value>
                <fullName>Biomedical Scientist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>