force-app/main/default/objects/Contact/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Geriatrics</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Endocrinology and Metabology</fullName>
            </value>
            <value>
                <fullName>Cardiovascular Surgery</fullName>
            </value>
            <value>
                <fullName>Dermatologist</fullName>
            </value>
            <value>
                <fullName>Plastic Surgery</fullName>
            </value>
            <value>
                <fullName>Radiology and Diagnostic Imaging</fullName>
            </value>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Allergy and Immunology</fullName>
            </value>
            <value>
                <fullName>Scholarship</fullName>
            </value>
            <value>
                <fullName>Aesthetic Medicine</fullName>
            </value>
            <value>
                <fullName>Coloproctology</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>General Surgery</fullName>
            </value>
            <value>
                <fullName>Gynecology and Obstetrics</fullName>
            </value>
            <value>
                <fullName>Infectology</fullName>
            </value>
            <value>
                <fullName>Intensive Care Medicine</fullName>
            </value>
            <value>
                <fullName>Medical Clinic</fullName>
            </value>
            <value>
                <fullName>Medical Genetics</fullName>
            </value>
            <value>
                <fullName>Nephrology</fullName>
            </value>
            <value>
                <fullName>Nutrology</fullName>
            </value>
            <value>
                <fullName>Occupational Medicine</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Orthopedics and Traumatology</fullName>
            </value>
            <value>
                <fullName>Otorhinolaryngology</fullName>
            </value>
            <value>
                <fullName>Paediatrics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>