force-app/main/default/objects/Contact/fields/UserSecretToken__c.field-meta.xml
<CustomField>
    <fullName>UserSecretToken__c</fullName>
    <label>UserSecretToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>