force-app/main/default/objects/Contact/fields/VerificationLinkExpiryDateTime__c.field-meta.xml
<CustomField>
    <fullName>VerificationLinkExpiryDateTime__c</fullName>
    <description>This field tracks the date and time when the verification link will expire</description>
    <label>Verification link Expiry Date Time</label>
    <type>DateTime</type>
</CustomField>