force-app/main/default/objects/Contact/listViews/GainConnect_Singapore.listView-meta.xml
<ListView>
    <fullName>GainConnect_Singapore</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>isTest__c</columns>
    <columns>TrustLevel__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BrandName__c</field>
        <operation>includes</operation>
        <value>GainConnect</value>
    </filters>
    <filters>
        <field>CONTACT.ADDRESS2_COUNTRY</field>
        <operation>equals</operation>
        <value>Singapore</value>
    </filters>
    <filters>
        <field>isTest__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>GainConnect Singapore</label>
</ListView>